--- a/src/components/PrimaryContent/PrimaryContent.css
+++ b/src/components/PrimaryContent/PrimaryContent.css
@@ -163,6 +163,7 @@
 	height: 230px; 
 	width: 100%;
 	margin-top: 10px;
+	/* box-shadow: 5px 10px; */
 }
 
 .selectedCardFontColorGreen {
@@ -315,7 +316,9 @@
 
 .chartRow{
 	padding-bottom: 60px;
-	background-color:#f4f4f4
+	background-color: red;
+	/* 234  */
+	height: 500px;
 }
 /* Card Flip */
 
