REmoving current squares when viewport is smaller

--- a/src/components/PrimaryContent/PrimaryContent.css
+++ b/src/components/PrimaryContent/PrimaryContent.css
@@ -201,7 +201,7 @@
 /* active card */
 .selectedCard {
 	height: 180px;
-	border: 1px solid gray;
+	/* border: 1px solid gray; */
 	background-color: blue;
 	/* padding-top: 15px;
 	margin-bottom: 20px; */
