Media query re defined for mobile and desktop

--- a/src/components/PrimaryContent/PrimaryContent.css
+++ b/src/components/PrimaryContent/PrimaryContent.css
@@ -191,7 +191,13 @@
 	height: 200px;
 } */
 
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 1024px) {
+    .desktop {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 1023px) {
     .mobile {
         display: none;
     }
