--- a/src/components/CustomDropDownPanel/CustomDropDownPanel.css
+++ b/src/components/CustomDropDownPanel/CustomDropDownPanel.css
@@ -31,7 +31,7 @@
 
 .panelBarContainer-closed{
     height: 0px;  
-    /* display:none; */
+    display:none;
     /* display:none; */
   
     /* display: none; */
