--- a/src/components/PrimaryContent/PrimaryContent.css
+++ b/src/components/PrimaryContent/PrimaryContent.css
@@ -162,7 +162,6 @@
 .sumChartSquare {
 	height: 200px; 
 	width: 100%;
-	margin-top: 20px;
 
 	/* box-shadow: 5px 10px; */
 }
@@ -194,13 +193,56 @@
 @media only screen and (max-width: 1024px) {
     .desktop {
         display: none;
-    }
+	}
+	.sumChartSquare{
+		height: 85px !important;
+		background-color: #1f1f1f;
+		padding: 15px;
+	}
+	.secondaryHeader{
+		width: 50% !important;
+		float: left;
+		color:white;
+		
+	}
+	.secondaryCategory{
+		width: 50% !important;
+		font-size: 1.8em;
+		float: left;
+		color:white;
+		
+	}
+	.valueText{
+		width:50% !important;
+		font-size: 1.8em;
+		float: right;
+		text-align: right;
+	}
+	.bullet{
+		width:50% !important;
+		float: right;
+
+	}
+	.selectedCard{
+		background-color:#1f1f1f !important;
+	}
+
 }
 
 @media only screen and (min-width: 1023px) {
     .mobile {
         display: none;
-    }
+	}
+	.sumChartSquare{
+		margin-top: 20px;
+
+	}
+	.secondaryCategory{
+		color:black !important;
+		
+	}
+	
+	
 }
 
 /* ipad Portrait */
@@ -221,7 +263,7 @@
 .selectedCard {
 	height: 180px;
 	/* border: 1px solid gray; */
-	background-color: blue;
+	background-color: white;
 	/* padding-top: 15px;
 	margin-bottom: 20px; */
 	-moz-box-shadow: 0 0 20px rgb(109, 109, 109);
@@ -233,7 +275,7 @@
 }
 .sumChartHeaderText {
 	/* dynamic */
-	color: rgb(21, 21, 21);
+	color: white;
 	/* padding-top: 8px; */
 	text-align: center;
 	font-size:20px;
@@ -274,7 +316,7 @@
 	left: 0;
 	height: 100%;
 	width: 51%;
-	background: blue;
+	background: white;
 	transform: skew(0deg, 9deg);
   }
   .arrow_box:after {
@@ -284,11 +326,14 @@
 	right: 0;
 	height: 100%;
 	width: 50%;
-	background: blue;
+	background: white;
 	transform: skew(0deg, -9deg);
 }
 
-
+.primaryRow{
+	height: 215px !important;
+	background-color: #f4f4f4;
+}
 
 /* Inside the Donut Charts */
 /* .insideDonut {
@@ -402,7 +447,7 @@
 	left: 0;
 	height: 100%;
 	width: 51%;
-	background: blue;
+	background: white;
 	transform: skew(0deg, 9deg);
   }
   .arrow_box:after {
@@ -412,6 +457,9 @@
 	right: 0;
 	height: 100%;
 	width: 50%;
-	background: blue;
+	background: white;
 	transform: skew(0deg, -9deg);
   }
+
+  
+  /**Mobile CSS**/
