padding on cards primary

--- a/src/components/PrimaryContent/PrimaryContent.css
+++ b/src/components/PrimaryContent/PrimaryContent.css
@@ -249,6 +249,10 @@
 	.sumChartHeaderText{
 		color: black !important;
 	}
+	.primaryRow {
+		padding-left: 3% !important;
+		padding-right: 3% !important;
+	}
 	
 	
 }
