--- a/src/components/PrimaryContent/PrimaryContent.css
+++ b/src/components/PrimaryContent/PrimaryContent.css
@@ -1,18 +1,18 @@
 /* Financial Squares */
 /* Card Flip */
 
-.flip-container {
+/* .flip-container {
 	perspective: 1000px;
-}
+} */
 	/* flip the pane when hovered */
-	.flip-container:hover .flipper, .flip-container.hover .flipper {
+	/* .flip-container:hover .flipper, .flip-container.hover .flipper {
 		transform: rotateY(180deg);
-	}
+	} */
 
-.flip-container, .front, .back {
+/* .flip-container, .front, .back {
 	width: 100%;
 	height: 480px;
-}
+} */
 /**Horizontal Spins**/
 .spinMeFirst{
 	animation: spin 0.6s ease-in-out forwards; 
@@ -162,7 +162,6 @@
 .sumChartSquare {
 	height: 200px; 
 	width: 100%;
-
 	/* box-shadow: 5px 10px; */
 }
 
@@ -253,8 +252,10 @@
 		padding-left: 3% !important;
 		padding-right: 3% !important;
 	}
-	
-	
+	.secondaryHeader {
+		font-size: 1.1em;
+		padding-top: 1%;
+	}
 }
 
 /* ipad Portrait */
@@ -306,11 +307,11 @@
 	background-color: transparent;
 }
 
-.donutChart {
+/* .donutChart {
 	padding-top: 4px;
 	position: absolute;
 	width: 100%
-}
+} */
 
 
 /* Arrow */
@@ -374,6 +375,7 @@
 	padding-left:  40px;
 	padding-right: 40px;
 }
+
 /* Card Flip */
 
 .flip-container {
@@ -427,9 +429,9 @@
 	align-content: center;
 }
 
-.secondaryHeader{
+/* .secondaryHeader{
 	font-size: 1.3em;
-}
+} */
 
 .valueText{
 	font-size:1.8em;
@@ -442,7 +444,7 @@
 
 
 .formattedTarget{
-	font-size: 1.2em;
+	font-size: 1.1em;
 
 }
 .arrow_box {
@@ -473,5 +475,8 @@
 	transform: skew(0deg, -9deg);
   }
 
-  
-  /**Mobile CSS**/
+img {
+	margin-top: 2px;
+	height: 24px;
+
+}
