--- a/src/components/FinancialSummary/FinancialSummary.css
+++ b/src/components/FinancialSummary/FinancialSummary.css
@@ -197,12 +197,12 @@
 	position: relative;
 	float:right;
 }
-.selectedCard {
+/* .selectedCard {
 	height: 225px;
 
 	padding-top: 15px;
 	margin-bottom: 20px;
-}
+} */
 .selectedCardText {
 	color: white !important;
 }
