hide filter panel on mobile devices

--- a/src/components/CustomDropDownPanel/CustomDropDownPanel.css
+++ b/src/components/CustomDropDownPanel/CustomDropDownPanel.css
@@ -29,6 +29,12 @@
     padding-left: 20px;
 }
 
+@media only screen and (max-width: 1024px) {
+    .panelDropDownContainer {
+        display: none;
+    }
+}
+
 .panelBarContainer-closed{
     height: 0px;  
     display:none;
