--- a/src/components/FilterBox/FilterBox.css
+++ b/src/components/FilterBox/FilterBox.css
@@ -6,6 +6,15 @@
   
 }
 
+/* Mobile */
+@media only screen and (max-width: 1024px) {
+    .filterContainer {
+        display: none;
+    }
+}
+
+
+
 .pillsContainer{
     overflow: wrap;
     float:left;
