--- a/src/components/KendoDialog/KendoDialog.css
+++ b/src/components/KendoDialog/KendoDialog.css
@@ -240,4 +240,29 @@
 }
 
 
-/* saved */
+
+/* mobile
+ */
+
+ /* Mobile Screens */
+@media only screen and (max-width: 1024px) {
+    .desktopDialog {
+        display: none;
+    }
+
+}
+@media only screen and (max-width: 765px) {
+    .desktopDialog {
+        display: none;
+    }
+
+}
+
+/* desktop */
+@media only screen and (min-width: 1024px) {
+    .mobileDialog {
+        display: none;
+    }
+}
+
+
