--- a/src/components/PrimaryContent/PrimaryContent.css
+++ b/src/components/PrimaryContent/PrimaryContent.css
@@ -103,17 +103,6 @@
 }
 
 
-/* On Hover Zoom for Card Charts - Donut */
-
-.zoom {
-	padding-top: 7px;
-    transition: transform .2s; /* Animation */
-}
-
-/* zooming in for the cards on Journey Financial Summary */
-.zoom:hover {
-    transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-}
 /* hide back of pane during swap */
 .front, .back {
 	backface-visibility: hidden;
@@ -159,11 +148,7 @@
 
 
 /* Previous Inline Style */
-.sumChartSquare {
-	height: 200px; 
-	width: 100%;
-	/* box-shadow: 5px 10px; */
-}
+
 
 .selectedCardFontColorGreen {
 	color: #0DB16e;
@@ -181,16 +166,137 @@
 	background-color: #0DB16e;
 } 
 
-.selectedCardText {
-	color: white !important;
-}
 
 /* .selectedCardSquare {
 	height: 200px;
 } */
 
 
-/* Mobile Stylings */
+
+
+
+
+/*****************************/
+/***** Squares Styling *******/
+/*****************************/
+/* All View Port Stylings */
+.sumChartSquare{
+	height: 200px; 
+	width: 100%;
+	/* box-shadow: 5px 10px; */
+}
+.sumChartContent {
+	height:100%;
+	width:100%;
+	background-color: transparent;
+}
+.sumChartHeader {
+	margin-top: -8px;
+	height: 40px;
+}
+.sumChartHeaderText {
+	color: black;
+	/* padding-top: 8px; */
+	text-align: center;
+	font-size:20px;
+	font-weight: bold;
+	margin-left: 12%;
+}
+.selectedCardText {
+	color: white ;
+}
+.primaryRow{
+	height: 202px ;
+	background-color: #f4f4f4 ;
+} 
+/* Laptop Stylings */
+.laptopSumChartSquare{
+	margin-top: 20px;
+}
+.laptopSecondaryCategory{
+	color:black !important;
+}
+.laptopSumChartHeaderText {
+	/* dynamic */
+	/* padding-top: 8px; */
+	text-align: center;
+	font-size:20px;
+	font-weight: bold;
+	margin-left: 12%;
+	color: black ;
+
+}
+.laptopPrimaryRow {
+	padding-left: 5% !important;
+	padding-right: 5% !important;
+	height: 201px;
+}
+.laptopSecondaryHeader{
+	padding-top: 5px;
+	font-size: 1.1em;
+}
+.laptopFormattedTarget {
+	font-size: 1.1em;
+}
+
+.laptopPrimaryRow {
+	padding-left: 3% !important;
+	padding-right: 3% !important;
+}
+.laptopSecondaryHeader {
+	font-size: 1.1em;
+	padding-top: 1%;
+}
+.laptopSelectedCard {
+	height: 180px;
+	/* border: 1px solid gray; */
+	background-color: white;
+	/* padding-top: 15px;
+	margin-bottom: 20px; */
+	-moz-box-shadow: 0 0 20px rgb(109, 109, 109);
+	-webkit-box-shadow: 0 0 20px rgb(109, 109, 109);
+	box-shadow: 0 0 20px rgb(109, 109, 109);
+}
+
+/* Mobile && Tablet Stylings */
+.mobileSumChartSquare, .tabletSumChartSquare{
+	height: 85px !important;
+	background-color: #1f1f1f;
+	padding: 15px;
+	margin-bottom: 4px;
+}
+.mobileSecondaryHeader{
+	width: 50% !important;
+	float: left;
+	color:white;
+	font-size: 1em !important;
+}
+
+.mobileSecondaryCategory{
+	width: 50% !important;
+	font-size: 1.8em;
+	float: left;
+	color:white;
+	
+}
+.mobileValueText{
+	width:50% !important;
+	font-size: 1.8em;
+	float: right;
+	text-align: right;
+}
+.mobileBullet{
+	width:50% !important;
+	float: right;
+
+}
+.mobileSelectedCard{
+	margin-left: 10px;
+	background-color:#1f1f1f !important;
+}
+.mobilePrimaryRow{
+	background-color:black !important;
+}
 @media only screen and (max-width: 1024px) {
 	body {
 		background-color: black;
@@ -204,44 +310,11 @@
 		padding: 15px;
 		margin-bottom: 4px;
 	}
-	.secondaryHeader{
-		width: 50% !important;
-		float: left;
-		color:white;
-		font-size: 1em !important;
-	}
 	
-	.secondaryCategory{
-		width: 50% !important;
-		font-size: 1.8em;
-		float: left;
-		color:white;
-		
-	}
-	.valueText{
-		width:50% !important;
-		font-size: 1.8em;
-		float: right;
-		text-align: right;
-	}
-	.bullet{
-		width:50% !important;
-		float: right;
-
-	}
-	.selectedCard{
-		margin-left: 10px;
-		background-color:#1f1f1f !important;
-	}
-	.primaryRow{
-		background-color:black !important;
-	}
 
 	
 }
-.mobileSumChartSquare{
-	
-}
+
 /* Desktop Stylings */
 @media only screen and (min-width: 1023px) {
 	body {
@@ -253,42 +326,8 @@
 	.sumChartSquare{
 		margin-top: 20px;
 	}
-	.secondaryCategory{
-		color:black !important;
-	}
-	.primaryRow {
-		padding-left: 5% !important;
-		padding-right: 5% !important;
-		height: 201px;
-	}
-	.secondaryHeader{
-		padding-top: 5px;
-		font-size: 1.1em;
-	}
-	.formattedTarget {
-		font-size: 1.1em;
-	}
-	.sumChartHeaderText{
-		color: black !important;
-	}
-	.primaryRow {
-		padding-left: 3% !important;
-		padding-right: 3% !important;
-	}
-	.secondaryHeader {
-		font-size: 1.1em;
-		padding-top: 1%;
-	}
-	.selectedCard {
-		height: 180px;
-		/* border: 1px solid gray; */
-		background-color: white;
-		/* padding-top: 15px;
-		margin-bottom: 20px; */
-		-moz-box-shadow: 0 0 20px rgb(109, 109, 109);
-		-webkit-box-shadow: 0 0 20px rgb(109, 109, 109);
-		box-shadow: 0 0 20px rgb(109, 109, 109);
-	}
+	
+	
 }
 
 /* ipad Portrait */
@@ -311,26 +350,14 @@
 .selectedCardText {
 	color: white !important;
 }
-.sumChartHeaderText {
-	/* dynamic */
-	color: white;
-	/* padding-top: 8px; */
-	text-align: center;
-	font-size:20px;
-	font-weight: bold;
-	margin-left: 12%;
-}
+
 
 .sumChartHeader {
 	margin-top: -8px;
 	height: 40px;
 }
 
-.sumChartContent {
-	height:100%;
-	width:100%;
-	background-color: transparent;
-}
+
 
 /* .donutChart {
 	padding-top: 4px;
@@ -389,10 +416,7 @@
 } */
 /* End Financial Squares */
 
-.primaryRow{
-	height: 202px !important;
-	background-color: #f4f4f4 !important;
-} 
+
 
 .chartRow{
 	padding-bottom: 60px;
