Finished wiring up DropDownList for Mobile Filters Page

--- a/src/components/MobileComponents/FitlerPage/components/DropDownFilter.css
+++ b/src/components/MobileComponents/FitlerPage/components/DropDownFilter.css
@@ -6,3 +6,11 @@
 .dropDownContainer {
     margin-top: 0px;
 }
+
+.kdropDown {
+    width: 100%;
+}
+
+.k-widget, .k-dropdown, .k-header {
+    width: 100%
+}
