Finished filter page for mobile devices - wired up and on nav

--- a/src/Views/App/App.css
+++ b/src/Views/App/App.css
@@ -1,3 +1,5 @@
+
+
 body {
     overflow-x: hidden;
 }
@@ -36,3 +38,8 @@ body {
 .custom-animation-enter-active {
     transform: scale(1);
 }
+
+/* Styling */
+
+
+
