--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -1,13 +1,14 @@
 /* Main Container */
 .sumViewContainer{
-    width: 100%;
+    width: 80%;
     height: 100%;
-    padding-top:15px;
+    padding-top: 14px;
     /* background-color: white; */
-    background-color: #F4F4F4;
+    background-color: transparent;
     padding-left: 15px;
     padding-right: 15px;
-
+    float: right;
+    color: white;
 }
 
 /* Summary Breadcrumb */
@@ -29,31 +30,31 @@
 /* Title for the detail Multi Chart */
 
 .detailTitle{
-    color: #000000;
+    color: white;
     
     font-style: Light;
     font-size: 30px;
     line-height: 34px;
     align-content: Left;
     float:left;
-    background-color: #F4F4F4;
+    background-color:transparent;
     padding: 0px;
     
 }
 .detailTitle2{
-    color: #000000;
+    color: white;
     
     font-style: Light;
     font-size: 30px;
     line-height: 34px;
     align-content: Left;
     float:left;
-    background-color:white;
+    background-color:transparent;
     padding: 0px;
     
 }
 .chartContainer{
-    background-color: #F4F4F4;
+    background-color: transparent;
 }
 /* Multi Chart Metric Container */
 .multiChartMetricContainer{
@@ -70,7 +71,7 @@
     width:50%;
     border-top-left-radius: 100px;
     border-bottom-left-radius: 100px;
-    border: 1px solid #3C3C3C;
+    border: 1px solid #f4f4f4;
 }
 /* ARR Metric Right Side of Selector */
 .arrMetric{
@@ -81,20 +82,20 @@
     padding-top:5px;
     border-top-right-radius: 100px;
     border-bottom-right-radius: 100px;
-    border: 1px solid #3C3C3C;
+    border: 1px solid #f4f4f4;
 }
 
 /* Active Metric Chosen */
 .activeMetric{
-    color:white;
-    background-color: #3C3C3C;
+    color: #3C3C3C;
+    background-color: white;
 
 }
 
 /* QTD Title Row */
 .qtdTitleBarHeader{
     margin-top:33px;
-    background-color:white;
+    background-color:transparent;
     padding-top: 15px;
     padding-bottom:15px;
 }
@@ -110,7 +111,7 @@
     /* width:100%; */
     padding: 0px;
     height:30px;
-    background-color:white;
+    background-color:transparent;
     
     align-content: right;
 }
@@ -171,7 +172,7 @@
 
 /* Quaretrly to date Top Details */
 .qtdTopDetails{
-    background-color: white;
+    background-color: transparent;
 }
 
 .qtdDetailTitle{
@@ -180,9 +181,9 @@
     height:30px;
     clear:right;
     text-align:center;
-    border-top: 1px solid #D8D8D8;
-    border-left: 1px solid #D8D8D8;
-    border-right: 1px solid #D8D8D8;
+    border-top: 1px solid #3c3c3c;
+    border-left: 1px solid #3c3c3c;
+    border-right: 1px solid #3c3c3c;
     font-size: 12px;
 }
 .weekDetailTitle{
@@ -191,9 +192,9 @@
     height:30px;
     clear:right;
     text-align:center;
-    border-top: 1px solid #D8D8D8;
-    border-left: 1px solid #D8D8D8;
-    border-right: 1px solid #D8D8D8;
+    border-top: 1px solid #3c3c3c;
+    border-left: 1px solid #3c3c3c;
+    border-right: 1px solid #3c3c3c;
     font-size: 12px;
 }
 .allContainer{
@@ -219,6 +220,8 @@
     border-right: 1px solid #D8D8D8;
     width: 450px;
 }
+
+
 .qtdTotalTitle{
     float: left;
     font-size: 24px;
@@ -234,7 +237,7 @@
 }
 .colContainer{
     height:80px;
-    background-color:#F4F4F4;
+    background-color:#3c3c3c;
     float:right;
     margin:1px;
 }
@@ -246,15 +249,18 @@
 }
 .halfSize{
     width:63px;
-    
 }
+
+.topPanelHeader {
+    color: white;
+}
+
 
 .contHeader{
     font-size: 15px;
     font-weight: bold;
     width: 100%;
     text-align:center;
-    /* padding-left: 5px; */
     padding-top:10px;
     float:left;
     clear:right;
@@ -264,8 +270,6 @@
     float:left;
     width: 100%;
     text-align:center;
-    /* padding-left: 10px; */
-
 }
 
 .normalTableSize{
@@ -273,13 +277,12 @@
 }
 .halfTableSize{
     width:860px;
-    
 }
 
 .exportButton{
     margin-left:20px;
-    color: #1573E6;
-    background-color:  white;
+    color: white;
+    background-color:  transparent;
     border-bottom-left-radius: 100px;
     border-top-left-radius: 100px;
     padding-left:20px;
@@ -288,15 +291,13 @@
     border-top-right-radius: 100px;
     padding-right:20px;
     height: 30px;
-    /* color:white; */
-    border: 1px solid #1573E6;
+    border: 1px solid #3c3c3c;
     font-weight: bold;
     font-size: 12px;
     margin-bottom: 2px;
     text-align: center;
     align-self: auto;
     float:right;
-
 }
 
 .excelLogo{
@@ -304,5 +305,11 @@
     height: 20px;
     width: 20px;
 }
-.excelSpan{
+
+.k-link, .k-header, .k-state-selected {
+    background-color: gray;
+}
+
+.k-widget, .k-panelbar, .k-reset, .k-header {
+    background-color: transparent;
 }
