Wired Multichart For Financials

--- a/src/components/KendoMultiChart/KendoMultiChart.css
+++ b/src/components/KendoMultiChart/KendoMultiChart.css
@@ -26,13 +26,17 @@
 .tooltipLastYear {
     background-color:#DFDE43;
 }
+.tooltipLastQuarter {
+    background-color:purple;
+}
+
 
 .tooltipTitle {
     color: white;
     display: inline-block;
     margin-left: 35%;
     margin-bottom: 10px;
-    
+
 }
 
 .tooltipValue {
