--- a/src/components/SecondaryContent/SecondaryContent.css
+++ b/src/components/SecondaryContent/SecondaryContent.css
@@ -5,7 +5,7 @@
 .journeyBoxHover:hover {
 	animation: grow .20s ease-in-out forwards;
     }
-.journeyBoxHover{
+.journeyBoxHover {
 	width: 230px;
 	display: inline;
 }
@@ -61,6 +61,7 @@
 	background: #131313;
 	border: 4px solid #FF0000;
 }
+
 .journeyBoxAlert:after, .journeyBoxAlert:before {
 	left: 100%;
 	top: 50%;
@@ -131,7 +132,6 @@
 	padding-top: 14px;
 	color: #FFFFFF;
 	height: 100%;
-
 }
 
 .journeysAmount {
@@ -281,8 +281,40 @@
 	font-size: 25px;
 	margin-bottom: -20px;
 	margin-right: 20px;
+}
+
+.box1 {
+	color: white;
+}
+
+.box2 {
+	color: white;
+}
+
+.box3 {
+	bottom: 0;
+	left: 0;
+}
+
+.mobileResizer {
+	cursor: row-resize;
+	position: relative;
+	background: #000000;
+	/* bottom: 0; */
+	top: 0;
+	left: 0;
 
 }
+
+.resizerIcon {
+
+	height: 10px;
+	width: 100px;
+	border-radius: 5px;
+	background: grey;
+	margin: 0 auto;
+}
+
 
 .mobileSecondaryBullet {
 	margin-top: 20px;
@@ -302,7 +334,7 @@
 	padding-top: 24px;
 	padding-left: 24px;
 	width: 50%;
-	height: 79px;
+	height: 80px;
 	
 }
 
@@ -331,6 +363,7 @@
 	margin-left: 20px;
 }
 
-.secondaryContentBottom {
-	height: 350px;
-}
+/* .secondaryContentBottom {
+	border: 1px solid hotpink;
+} */
+
