--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -310,6 +310,6 @@
     background-color: gray;
 }
 
-.k-widget, .k-panelbar, .k-reset, .k-header {
+/* .k-widget, .k-panelbar, .k-reset, .k-header {
     background-color: transparent;
-}
+} */
