--- a/src/components/MobileComponents/Playground/Playground.css
+++ b/src/components/MobileComponents/Playground/Playground.css
@@ -1,6 +1,6 @@
 .playgroundContainer {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     background-color: black;
     /* margin: 0;
     display: flex;
@@ -9,9 +9,9 @@
 }
 
 .item {
-    height: 450px;
+    height: inherit;
     width: 100%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     justify-content: center;
     color: white;
 }
