--- a/src/components/MobileComponents/Playground/Playground.css
+++ b/src/components/MobileComponents/Playground/Playground.css
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center; */
+    overflow: auto;
 }
 
 .item {
@@ -14,6 +15,8 @@
     /* border: 1px solid red; */
     justify-content: center;
     color: white;
+    overflow: auto;
+    
 }
 
 .hideMe {
