--- a/src/components/SecondaryContent/SecondaryContent.css
+++ b/src/components/SecondaryContent/SecondaryContent.css
@@ -41,14 +41,14 @@
 	text-transform: uppercase;
 	color: #FFFFFF;
 	/* vertical text */
-	-webkit-transform: rotate(-90deg);	
+	-webkit-transform: rotate(-90deg);
 	-moz-transform: rotate(-90deg);
 	-ms-transform: rotate(-90deg);
 	-o-transform: rotate(-90deg);
 	transform: rotate(-90deg);
 }
 
-    
+
 /* Journey Card Selected Dynamic */
 .journeyBoxAlert { border: 2px solid #FF0000;}
 
@@ -188,13 +188,13 @@
 	background-color: #000000;
 	margin-top: 1px;
 	/* float: left; */
-	
+
 }
 .journeySquareHeader{
 	height:40px;
 	width:109px;
 	background-color: #3c3c3c;
-	margin-top:1px;	
+	margin-top:1px;
 	color:white;
 	text-align: center;
 	transform: rotate(-90deg);
@@ -205,7 +205,7 @@
 	background-color:#000000;
 	height:109px;
 	width:222px;
-	
+
 }
 .journeyContentHeader{
 	transform: rotate(-90deg);
@@ -258,7 +258,7 @@
 
 .mobileSecondaryBoxContentAmount {
 	margin-right: 10px;
-	float: right;
+	float: left;
 	color: red;
 	font-family: Ubuntu;
 	font-style: normal;
@@ -335,7 +335,7 @@
 	padding-left: 24px;
 	width: 50%;
 	height: 80px;
-	
+
 }
 
 /* Primary Data Category Navigation and Title */
@@ -366,4 +366,3 @@
 /* .secondaryContentBottom {
 	border: 1px solid hotpink;
 } */
-
