--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -5,7 +5,7 @@
     padding-top: 14px;
     /* background-color: white; */
     background-color: transparent;
-    /* padding-left: 15px; */
+    padding-left: 15px;
     padding-right: 15px;
     float: right;
     color: white;
