Pulled value to the right of primary box and added stats

--- a/src/components/CommentBox/CommentBox.css
+++ b/src/components/CommentBox/CommentBox.css
@@ -181,8 +181,7 @@ hr{
 
 /* Content 2: QTD / Weekly Data */
 .mobileCommentContainer{
-  overflow: auto;
-  overflow: hidden;
+  overflow-y: auto;
 }
 .mobileComment, .mobileCommentUserHeader,
 .mobileCommentUserName, .mobileCommentTime,
