--- a/src/components/MobileComponents/Playground/components/MobileViewDetails/MobileViewDetails.css
+++ b/src/components/MobileComponents/Playground/components/MobileViewDetails/MobileViewDetails.css
@@ -2,6 +2,18 @@
     padding-top: 10px;
 }
 
+.details-mobile-container:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    pointer-events: none;
+    background-image: linear-gradient(to bottom, rgba(71, 67, 67, 0), rgb(0, 0, 0) 90%);
+    width: 100%;
+    height: 12em;
+}
+
 .content-col-left {
     text-align: right;
     padding: 1%;
