Moved the Amount values for mobile to the right, closer to figma design

--- a/src/components/PrimaryContent/PrimaryContent.css
+++ b/src/components/PrimaryContent/PrimaryContent.css
@@ -310,7 +310,8 @@
 	width:50% !important;
 	font-size: 1.8em;
 	float: left;
-	text-align: left;
+	text-align: right;
+	padding-right: 40px;
 }
 .mobileBullet{
 	width:50% !important;
