--- a/src/components/SecondaryContent/SecondaryContent.css
+++ b/src/components/SecondaryContent/SecondaryContent.css
@@ -258,7 +258,7 @@
 
 .mobileSecondaryBoxContentAmount {
 	margin-right: 10px;
-	float: left;
+	float: right;
 	color: red;
 	font-family: Ubuntu;
 	font-style: normal;
