--- a/src/components/KendoMultiChart/KendoMultiChart.css
+++ b/src/components/KendoMultiChart/KendoMultiChart.css
@@ -19,7 +19,12 @@
     border: 1px solid black;
 }
 
-
+.ttBGRed {
+    background: #FF0000;
+}
+.ttBGGreen {
+    background:#0DB16E ;
+}
 .tooltipTarget {
     background-color: #0E9CC6;
 }
