--- a/src/components/KendoMultiChart/KendoMultiChart.css
+++ b/src/components/KendoMultiChart/KendoMultiChart.css
@@ -25,6 +25,20 @@
 .ttBGGreen {
     background:#0DB16E ;
 }
+
+
+.textRed {
+    color: #FF0000;
+}
+.textGreen {
+    color:#0DB16E ;
+}
+.borderRed {
+    border: 5px solid #FF0000;
+}
+.borderGreen {
+    border: 5px solid #0DB16E ;
+}
 .tooltipTarget {
     background-color: #0E9CC6;
 }
@@ -56,7 +70,7 @@
 }
 
 .tooltipContainer {
-    background-color: white;
+    /* background-color: white; */
 }
 
 .series-name {
