--- a/src/Views/App/App.css
+++ b/src/Views/App/App.css
@@ -5,9 +5,8 @@ body {
 }
 @import url('https://fonts.googleapis.com/css?family=Ubuntu:300');
 * {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Ubuntu', sans-serif !important;
 }
-
 /* Animation */
 
 .example-appear {
