--- a/src/components/KendoMultiChart/KendoMultiChart.css
+++ b/src/components/KendoMultiChart/KendoMultiChart.css
@@ -20,10 +20,10 @@
 }
 
 .ttBGRed {
-    background: #FF0000;
+    background-color: #FF0000;
 }
 .ttBGGreen {
-    background:#0DB16E ;
+    background-color:#0DB16E ;
 }
 .tooltipTarget {
     background-color: #0E9CC6;
@@ -41,10 +41,9 @@
 .tooltipTitle {
     color: white;
     display: inline-block;
-    text-align: center;
-    padding: 10px;
+    text-align: center !important;
+    padding: 10px !important;
     margin-bottom: 10px;
-    background: red;
     width: 100%;
     height: 100%;
 }
@@ -57,6 +56,7 @@
 
 .tooltipContainer {
     background-color: white;
+    margin: -10px;
 }
 
 .series-name {
@@ -65,4 +65,8 @@
 
 .series-values {
     color: black;
+}
+
+.innerContent {
+    padding: 10px;
 }
