--- a/src/components/KendoMultiChart/KendoMultiChart.css
+++ b/src/components/KendoMultiChart/KendoMultiChart.css
@@ -20,10 +20,10 @@
 }
 
 .ttBGRed {
-    background: #FF0000;
+    background-color: #FF0000;
 }
 .ttBGGreen {
-    background:#0DB16E ;
+    background-color:#0DB16E ;
 }
 
 
@@ -58,7 +58,6 @@
     text-align: center;
     padding: 10px;
     margin-bottom: 10px;
-    background: red;
     width: 100%;
     height: 100%;
 }
@@ -71,6 +70,11 @@
 
 .tooltipContainer {
     /* background-color: white; */
+    margin: -10px;
+}
+
+.innerContainer {
+    margin: 10px;
 }
 
 .series-name {
