--- a/src/Views/App/App.css
+++ b/src/Views/App/App.css
@@ -5,7 +5,7 @@ body {
 }
 @import url('https://fonts.googleapis.com/css?family=Ubuntu:300');
 * {
-    font-family: 'Ubuntu', sans-serif !important;
+    font-family: 'Ubuntu', sans-serif ;
 }
 /* Animation */
 
@@ -15,7 +15,7 @@ body {
     animation-duration: 4s;
     animation-delay: 2s;
 }
-  
+
 .example-appear.example-appear-active {
     opacity: 1;
     transform: translateY(0px);
@@ -28,7 +28,7 @@ body {
 /* .custom-animation {
     width: 100%;
     height: 100%;
-   
+
 } */
 .custom-animation-enter {
     transform: scale(0);
@@ -39,6 +39,3 @@ body {
 }
 
 /* Styling */
-
-
-
