Darryl request for new panel icon color: results in better visibility

--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -350,3 +350,6 @@
 /* .k-widget, .k-panelbar, .k-reset, .k-header {
     background-color: transparent;
 } */
+.k-panelbar>.k-item>.k-link .k-icon {
+    color: white !important;
+}
